本地化文件，开始汉化

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <head>
     <!--Libraries-->
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.rawgit.com/schteppe/poly-decomp.js/1ef946f1/build/decomp.min.js"></script>
-        <script src="https://cdn.rawgit.com/liabru/matter-js/0895d81f/build/matter.min.js"></script>
-        <script src="https://cdn.rawgit.com/liabru/matter-attractors/c470ed42/build/matter-attractors.min.js"></script>
-        <script type="text/javascript" src="https://download.playfab.com/PlayFabClientApi.js"></script>
-        <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
+        <script src="decomp.min.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
+        <script src="matter-attractors.min.js"></script>
+        <script type="text/javascript" src="PlayFabClientApi.js"></script>
+        <script src='kongregate_api.js'></script>
     <!--Google Analytics-->
+<!--
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146113740-8"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -15,6 +16,7 @@
 
             gtag('config', 'UA-146113740-8');
         </script>
+-->
     <!--Base Code-->
         <link rel="stylesheet" href="BaseCode/PinBase.css">
         <!--script src="Code/js/obBase.js"></script-->
@@ -22,7 +24,8 @@
         <link rel="stylesheet" href="Code/css/Pinball.css">
         <script src="Code/js/obBall.js"></script>
 </head>
-<body>
+<body><script src="chs.js"></script>
+<script src="//likexia.gitee.io/game/zh/core.js"></script>
     <div id="HeaderHolder">
         <div id="Header">PINCREMENTAL</div>
     </div>
@@ -1046,4 +1049,8 @@
 </div>
 
 </body>
+ <!--客服 开始-->
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
   
