--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <!--Main Code-->
         <link rel="stylesheet" href="Code/css/Pinball.css">
         <script src="Code/js/obBall.js"></script>
+        
+        <title>弹珠增量 - PINCREMENTAL</title>
 </head>
 <body><script src="chs.js"></script>
 <script src="//likexia.gitee.io/game/zh/core.js"></script>
     <div id="HeaderHolder">
-        <div id="Header">PINCREMENTAL</div>
+        <div id="Header">弹珠增量 - PINCREMENTAL</div>
     </div>
     <div id="BottomButtons">
         <div class="bButtonHolder">
