--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<head>
+<head>   <meta charset="utf-8" />
+
     <!--Libraries-->
             <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="decomp.min.js"></script>        
