--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <head>   <meta charset="utf-8" />
-
     <!--Libraries-->
-            <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="decomp.min.js"></script>        
-        <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
+                    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="decomp.min.js"></script>
+                <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
         <script src="matter-attractors.min.js"></script>
-        <script type="text/javascript" src="https://download.playfab.com/PlayFabClientApi.js"></script>
+<!--        <script type="text/javascript" src="https://download.playfab.com/PlayFabClientApi.js"></script>-->
         <script src='kongregate_api.js'></script>
     <!--Google Analytics-->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146113740-8"></script>
@@ -22,13 +21,14 @@
     <!--Main Code-->
         <link rel="stylesheet" href="Code/css/Pinball.css">
         <script src="Code/js/obBall.js"></script>
-                <title>弹珠增量 - PINCREMENTAL</title>
+                        <title>弹珠增量 - PINCREMENTAL</title>
 </head>
 <body>
-   <body><script src="chs.js"></script>
+      <body><script src="chs.js"></script>
 <script src="//likexia.gitee.io/game/zh/core.js"></script>
+
     <div id="HeaderHolder">
-        <div id="Header">弹珠增量 - PINCREMENTAL</div>
+        <div id="Header">PINCREMENTAL</div>
     </div>
     <div id="BottomButtons">
         <div class="bButtonHolder">
@@ -993,7 +993,7 @@
                     </div>
                     <br>
                     <div class="DonationHolder Setting" id="LossPrestiges">
-                        <button class="InfoButton" id="LossPrestiges">AutoPrestige on Loss:<br><span id="LossPrestige">Off</span></button>
+                        <button class="InfoButton" id="LossPrestiges">AutoPrestige Only on Loss:<br><span id="LossPrestige">Off</span></button>
                     </div>
                     <div class="DonationHolder Setting" id="TransparentMenus">
                         <button class="InfoButton" id="TransparentMenus">Transparent Menus:<br><span id="TransparentMenu">Off</span></button>
@@ -1093,7 +1093,8 @@
 <div id="TheApps">
     <span id="AppsTitle">Platforms</span>
     <img id="Apple" src="Images/Support/AppStore.png"  onclick="window.open('https://apps.apple.com/app/apple-store/id1521398832?pt=120450796&ct=Kongregate&mt=8')"/><br>
-    <img id="Google" src="Images/Support/GooglePlay.png"  onclick="window.open('https://play.google.com/store/apps/details?id=com.Makopaz.Pincremental&hl=en_US&referrer=utm_source%3DKongregate%26utm_campaign%3DInGame')"/>
+    <img id="Google" src="Images/Support/GooglePlay.png"  onclick="window.open('https://play.google.com/store/apps/details?id=com.Makopaz.Pincremental&hl=en_US&referrer=utm_source%3DKongregate%26utm_campaign%3DInGame')"/><br>
+    <img id="Steam" src="Images/Support/Steam.png"  onclick="window.open('https://store.steampowered.com/app/1369470/Pincremental/?utm_source=Kongregate&utm_medium=InGame&utm_campaign=InGame')"/>
 </div>
 
 <!--div class="TicketsTitle" style="display:none">
@@ -1115,10 +1116,10 @@
     <div class="SideTitle SideMana" id="ManaTitle" style="display: none;">Mana<br>Available:</div>
     <div class="SideNum SideMana AvailableMana" id="ManaSNUM" style="display: none;">0</div>
 </div>
-
 </body> <!--客服 开始-->
 <link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
 <script src="//likexia.gitee.io/game/js/kf.js"></script>
 <!-- 客服 结束 -->
 
+</body>
   
