--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--Main Code-->
         <link rel="stylesheet" href="Code/css/Pinball2.css">
         <script src="Code/js/obBall2.js"></script>
+        <title>弹珠增量 - PINCREMENTAL</title>
 </head>
 <body>
    <script src="chs.js?1208"></script>
