--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="decomp.min.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
         <script src="matter-attractors.min.js"></script>
-        <script type="text/javascript" src="https://download.playfab.com/PlayFabClientApi.js"></script>
+        <script type="text/javascript" src="PlayFabClientApi.js"></script>
         <script src='kongregate_api.js'></script>
     <!--Google Analytics-->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146113740-8"></script>
