--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <!--Libraries-->
+    <meta charset="utf-8" />
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="decomp.min.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
