--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <title>弹珠增量 - PINCREMENTAL</title>
 </head>
 <body>
-      <script src="chs.js?1208"></script>
-<script src="//likexia.gitee.io/game/zh/core.js"></script>
+<script src="chs.js?202106041511"></script>
+<script src="//g8hh.com/zh/core.js"></script>
 
     <div id="HeaderHolder">
         <div id="Header">弹珠增量 - PINCREMENTAL</div>
@@ -1180,8 +1180,8 @@
     <div class="SideNum SideMana AvailableMana" id="ManaSNUM" style="display: none;">0</div>
 </div>
 <!--客服 开始-->
-<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com/static/js/kf.js"></script>
 <!-- 客服 结束 -->
 
 </body>
