--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <head>
     <!--Libraries-->
     <meta charset="utf-8" />
-        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="//g8hh.com/static/js/jquery.min.js"></script>
         <script src="decomp.min.js"></script>
         <script src="https://cdn.bootcdn.net/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
         <script src="matter-attractors.min.js"></script>
         <script type="text/javascript" src="PlayFabClientApi.js"></script>
         <script src='kongregate_api.js'></script>
     <!--Google Analytics-->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146113740-8"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146113740-8"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
             gtag('config', 'UA-146113740-8');
-        </script>
+        </script> -->
     <!--Base Code-->
         <link rel="stylesheet" href="BaseCode/PinBase.css">
         <!--script src="Code/js/obBase.js"></script-->
@@ -1183,6 +1183,17 @@
 <link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
 <script src="//g8hh.com/static/js/kf.js"></script>
 <!-- 客服 结束 -->
-
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    </div>
 </body>
   
